--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
-  },
-  "author": "Alpixn pvt ltd",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.11.0",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "buffer": "^6.0.3",
-    "cloudinary": "^2.7.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "mongoose": "^8.17.2",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.6",
-    "nodemon": "^3.1.10",
-    "qrcode": "^1.5.4",
-    "socket.io": "^4.8.1",
-    "streamifier": "^0.1.1"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon index.js",
+		"start": "node index.js",
+		"seed:admin": "node scripts/seedAdminData.js"
+	},
+	"author": "Alpixn pvt ltd",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"axios": "^1.11.0",
+		"bcrypt": "^6.0.0",
+		"bcryptjs": "^3.0.2",
+		"buffer": "^6.0.3",
+		"cloudinary": "^2.7.0",
+		"cookie-parser": "^1.4.7",
+		"cors": "^2.8.5",
+		"dotenv": "^17.2.1",
+		"express": "^5.1.0",
+		"helmet": "^8.1.0",
+		"js-cookie": "^3.0.5",
+		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
+		"mongoose": "^8.17.2",
+		"multer": "^2.0.2",
+		"nodemailer": "^7.0.6",
+		"nodemon": "^3.1.10",
+		"qrcode": "^1.5.4",
+		"socket.io": "^4.8.1",
+		"streamifier": "^0.1.1"
+	}
 }
