--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon index.js",
 		"start": "node index.js",
-		"seed:admin": "node scripts/seedAdminData.js"
+		"seed:admin": "node scripts/seedAdminData.js",
+		"seed:products": "node scripts/seedProducts.js",
+		"seed:customers": "node scripts/seedCustomersAndOrders.js",
+		"seed:reports": "node scripts/seedStudentReports.js",
+		"seed:all": "node scripts/seedAll.js"
 	},
 	"author": "Alpixn pvt ltd",
 	"license": "ISC",
