--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "node index.js",
 		"seed:admin": "node scripts/seedAdminData.js",
 		"seed:products": "node scripts/seedProducts.js",
+		"seed:services": "node scripts/seedServices.js",
 		"seed:customers": "node scripts/seedCustomersAndOrders.js",
 		"seed:reports": "node scripts/seedStudentReports.js",
 		"seed:tickets": "node scripts/seedTickets.js",
