--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"nodemon": "^3.1.10",
 		"qrcode": "^1.5.4",
 		"socket.io": "^4.8.1",
-		"streamifier": "^0.1.1"
+		"streamifier": "^0.1.1",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1"
 	}
 }
