--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
+		"form-data": "^4.0.4",
 		"helmet": "^8.1.0",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"jwt-decode": "^4.0.0",
+		"mailgun.js": "^12.1.1",
 		"mongoose": "^8.17.2",
 		"multer": "^2.0.2",
 		"nodemailer": "^7.0.6",
