fixed server issues

--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon index.js",
 		"start": "node index.js",
-		"seed:admin": "node scripts/seedAdminData.js",
-		"seed:services": "node scripts/seedServices.js",
-		"seed:tickets": "node scripts/seedTickets.js",
-		"seed:all": "node scripts/seedAll.js"
+		"export:static": "node scripts/exportStaticData.js > static-export.json",
+		"import:static": "node scripts/importStaticData.js static-export.json"
 	},
 	"author": "Alpixn pvt ltd",
 	"license": "ISC",
